# AECPy

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
exemplos/: AEC_ex06.ipynb  portico2d.py  portico_plano_01.py  viga_01.py
src/AECPy/: __init__.py  axial.py  elemento.py  flexao.py  graficos.py  material.py  modelo.py  no.py  procedimentos.py  secao.py  unidades.py
