[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AECPy"
version = "0.0.1"
authors = [
  { name="Felipe Schaedler de Almeida", email="felipe.alemida@ufrgs.br" },
]
description = "Análise estrutural basado no método da rigidez direta"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/schaedleralmeida/AECPy"
Issues = "https://github.com/schaedleralmeida/AECPy/issues"